Style: remove border bottom of hero section and top of logos. Fix hero image center alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,13 +277,13 @@ transform: rotate(-405deg);
 
 #parallax1 {
     background: url('/assets/images/nurture-growth.webp') no-repeat fixed top / cover;
-    height: 40vh;
+    height: 20vh;
     padding: 0;
 }
 
 #parallax2 {
     background: url('/assets/images/nurture-protect.webp') no-repeat fixed top / cover;
-    height: 25vh;
+    height: 7.55vh;
     padding: 0;    
 }
 
@@ -534,6 +534,18 @@ section, footer {
 
 header, section, footer {
     padding: 3.5em;
+}
+
+#hero {
+    border-bottom: none;
+}
+
+#hero-image {
+    text-align: center;
+}
+
+#client-logos-container {
+    border-top: none;
 }
 
 /*  Hero, Testimonial, Contact Multi Column Section Widths */
